[gd_scene load_steps=3 format=3 uid="uid://cooh48uw4bjsk"]

[ext_resource type="Script" path="res://Game.gd" id="1_g6b4v"]
[ext_resource type="PackedScene" uid="uid://chrxrpbcsudtr" path="res://ui/menu.tscn" id="2_k83v8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_g6b4v")

[node name="GetPokemon" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="GetPokemonSpecies" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="GetPokemonPic" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.470588, 0.368627, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.5
offset_right = 16.5
offset_bottom = 119.0
grow_horizontal = 2
theme_override_constants/margin_top = 50

[node name="Name" type="Label" parent="CanvasLayer/ColorRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.5
offset_top = -81.0
offset_right = 55.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="CanvasLayer/ColorRect/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Retry"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -575.0
offset_top = -198.0
offset_right = 572.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 100

[node name="Menu" parent="CanvasLayer/ColorRect/MarginContainer3" instance=ExtResource("2_k83v8")]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/ColorRect/MarginContainer2/Button" to="." method="_on_button_pressed"]
